# cs356-sp25

./: .gitignore  README.md
chatgpt/: CMakeLists.txt
claude/: main.cpp  main1.cpp
conway/: main.cpp
editor/: CMakeLists.txt  Node.cpp  Node.h  main.cpp
garage/: CMakeLists.txt  garage.cpp
lucaRPN/: Function.cpp  Function.h  main.cpp  mainwindow.cpp  mainwindow.h
microservice/: square.py
paintingOnCanvas/Y/: CMakeLists.txt
paintingOnCanvas/Y/include/: MyCanvas.h
paintingOnCanvas/Y/src/: main.cpp
paper/: .gitignore  Makefile  README.md  mobdesign.bib  mobdesign.tex
paper/paper_template/: .gitignore
syllabus/: Makefile  syllabus.tex
x/: .gitignore  CMakeLists.txt  VSCODE  hello_test.cpp
x/ben-kanter/: CMakeLists.txt  CreatedNode.cpp  CreatedNode.h  Node.cpp  Node.h  main.cpp
x/ben-kovitz/: CMakeLists.txt  hello_test.cpp  snapmain.cpp
x/include/: mainwindow.h
x/paintingOnCanvas/Y/src/: MyCanvas.cpp
x/src/: main2.cpp  mainwindow.cpp
